# Chat-physio-APP

./: .coderabbit.yaml  .dockerignore  .env.example  .gitattributes  .gitignore  CHAT_EXAMPLES.md  IMPLEMENTATION_COMPLETE_STORY_7.2.md  ISTRUZIONI-USO-VARIABILI-AMBIENTE.md  README.md  ROADMAP.md  chat-study-guide.md  docker-compose.dev.yml  docker-compose.yml  parere-architetto.md  pnpm-lock.yaml  ricerca-mat-9,3.md  tmp_print.ps1
apps/api/: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.dev  ENV_TEST_SETUP.md  ENV_TEST_TEMPLATE.txt  README.md  check_chunks.py  pyproject.toml  pytest.ini  run_p0_tests.bat  run_p0_tests_nfr.bat  test_ingestion.py  test_scan.py  verify_db.py
apps/api/api/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  main.py  main_backup_v1.py  middleware.py  stores.py  test_main.py
apps/api/reports/: batch_ingestion_report.csv  batch_ingestion_report.json  batch_ingestion_report.md
apps/api/scripts/: audit_legacy_imports.py  benchmark_retrieval.py  watcher_runner.py
apps/api/tests/: README_E2E_TESTS.md  __init__.py  conftest.py  test_admin_debug.py  test_ag_endpoint.py  test_analytics.py  test_analytics_advanced.py  test_bug_feedback_aggregation.py  test_chat_nfr.py  test_chat_query.py  test_chat_service.py  test_chunk_integrity.py  test_chunk_strategies.py  test_chunking_router.py  test_classification_cache.py  test_classification_cache_admin_security.py  test_classification_cache_pipeline.py  test_classifier_binding.py  test_classify.py  test_conversational_followup.py  test_document_explorer.py  (+34 more)
(+761 files in other folders)
